[package]
name = "parity-tokio-ipc"
version = "0.2.0"
edition = "2018"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/parity-tokio-ipc"
homepage = "https://github.com/nikvolf/parity-tokio-ipc"
description = """
Interprocess communication library for tokio.
"""

[dependencies]
bytes = "0.4"
futures = "0.1"
log = "0.4"
mio-named-pipes = { git = "https://github.com/hankbao/mio-named-pipes.git", branch = "custom" }
miow = "0.3.3"
rand = "0.7"
tokio = { git = "https://github.com/hankbao/tokio.git", branch = "v0.1.x-windows" }
tokio-named-pipes = { git = "https://github.com/hankbao/tokio-named-pipes.git", branch = "custom" }
tokio-uds = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "winbase"] }
